--- a/resource.rc
+++ b/resource.rc
@@ -40,7 +40,8 @@ BEGIN
     PUSHBUTTON      "Add",IDC_ADD,0,277,50,14
     PUSHBUTTON      "Edit",IDC_EDIT,87,277,50,14
     PUSHBUTTON      "Delete",IDC_DELETE,193,277,50,14
-    PUSHBUTTON      "Exit",IDCANCEL,397,276,50,14
+    PUSHBUTTON      "Exit",IDCANCEL,362,277,50,14
+    SCROLLBAR       IDC_GRIPPY,427,273,20,22,SBS_VERT
 END
 
 
