--- a/resource.rc
+++ b/resource.rc
@@ -39,9 +39,25 @@ BEGIN
     EDITTEXT        IDC_FILTER_DESC,333,255,114,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Add",IDC_ADD,0,277,50,14
     PUSHBUTTON      "Edit",IDC_EDIT,87,277,50,14
-    PUSHBUTTON      "Delete",IDC_DELETE,193,277,50,14
+    PUSHBUTTON      "Delete",IDC_DELETE,178,277,50,14
     PUSHBUTTON      "Exit",IDCANCEL,362,277,50,14
     SCROLLBAR       IDC_GRIPPY,427,273,20,22,SBS_VERT
+END
+
+IDD_ENTRY DIALOG DISCARDABLE  0, 0, 217, 97
+STYLE WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | 
+    WS_THICKFRAME
+CAPTION "Entry"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,0,83,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,167,83,50,14
+    LTEXT           "User",IDC_STATIC,0,0,16,8
+    LTEXT           "Password",IDC_STATIC,0,29,32,8
+    LTEXT           "Description",IDC_STATIC,0,58,43,8
+    EDITTEXT        IDC_EDIT_USER,43,0,165,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PWD,43,29,165,17,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_DESC,43,58,165,17,ES_AUTOHSCROLL
 END
 
 
@@ -82,6 +98,14 @@ BEGIN
     IDD_DIALOG, DIALOG
     BEGIN
         HORZGUIDE, 255
+    END
+
+    IDD_ENTRY, DIALOG
+    BEGIN
+        VERTGUIDE, 43
+        VERTGUIDE, 208
+        HORZGUIDE, 29
+        HORZGUIDE, 58
     END
 END
 #endif    // APSTUDIO_INVOKED
