--- a/resource.rc
+++ b/resource.rc
@@ -33,15 +33,14 @@ CAPTION "PWD STORE"
 FONT 8, "MS Sans Serif"
 BEGIN
     PUSHBUTTON      "IDC_LISTVIEW",IDC_LISTVIEW,0,0,447,249
-    LTEXT           "Filter name",IDC_STATIC_FL,0,255,35,8
-    EDITTEXT        IDC_FILTER_NAME,39,255,116,14,ES_AUTOHSCROLL
-    LTEXT           "Filter description",IDC_STATIC_FR,275,255,52,8
-    EDITTEXT        IDC_FILTER_DESC,333,255,114,14,ES_AUTOHSCROLL
+    LTEXT           "Filter description",IDC_STATIC_FR,0,255,52,8
+    EDITTEXT        IDC_FILTER_DESC,61,255,162,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Add",IDC_ADD,0,277,50,14
     PUSHBUTTON      "Edit",IDC_EDIT,87,277,50,14
     PUSHBUTTON      "Delete",IDC_DELETE,178,277,50,14
     SCROLLBAR       IDC_GRIPPY,427,273,20,22,SBS_VERT
     PUSHBUTTON      "Save n exit",IDC_SAVE_EXIT,357,277,50,14
+    PUSHBUTTON      "PASTE",IDC_PASTE,245,277,50,14,NOT WS_VISIBLE
 END
 
 IDD_ENTRY DIALOG DISCARDABLE  0, 0, 217, 97
