--- a/resource.rc
+++ b/resource.rc
@@ -36,11 +36,12 @@ BEGIN
     LTEXT           "Filter description",IDC_STATIC_FR,0,255,52,8
     EDITTEXT        IDC_FILTER_DESC,61,255,162,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Add",IDC_ADD,0,277,50,14
-    PUSHBUTTON      "Edit",IDC_EDIT,87,277,50,14
-    PUSHBUTTON      "Delete",IDC_DELETE,178,277,50,14
+    PUSHBUTTON      "Edit",IDC_EDIT,60,277,50,14
+    PUSHBUTTON      "Delete",IDC_DELETE,130,277,50,14
+    PUSHBUTTON      "PASTE",IDC_PASTE,209,276,50,14,NOT WS_VISIBLE
+    PUSHBUTTON      "Save",IDC_SAVE,311,277,50,14
+    PUSHBUTTON      "EXIT",IDCANCEL,372,277,50,14
     SCROLLBAR       IDC_GRIPPY,427,273,20,22,SBS_VERT
-    PUSHBUTTON      "Save n exit",IDC_SAVE_EXIT,357,277,50,14
-    PUSHBUTTON      "PASTE",IDC_PASTE,245,277,50,14,NOT WS_VISIBLE
 END
 
 IDD_ENTRY DIALOG DISCARDABLE  0, 0, 217, 97
