--- a/resource.rc
+++ b/resource.rc
@@ -35,6 +35,8 @@ BEGIN
     PUSHBUTTON      "IDC_LISTVIEW",IDC_LISTVIEW,0,0,447,249
     LTEXT           "Filter description",IDC_STATIC_FR,0,255,52,8
     EDITTEXT        IDC_FILTER_DESC,61,255,162,14,ES_AUTOHSCROLL
+    CONTROL         "Always on top",IDC_ON_TOP,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,279,255,60,10
     PUSHBUTTON      "Add",IDC_ADD,0,277,50,14
     PUSHBUTTON      "Edit",IDC_EDIT,60,277,50,14
     PUSHBUTTON      "Delete",IDC_DELETE,130,277,50,14
