--- a/resource.rc
+++ b/resource.rc
@@ -55,12 +55,12 @@ FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,0,83,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,167,83,50,14
-    LTEXT           "User",IDC_STATIC,0,0,16,8
     LTEXT           "Description",IDC_STATIC,0,58,43,8
     EDITTEXT        IDC_EDIT_USER,43,0,165,17,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PWD,43,29,165,17,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_DESC,43,58,165,17,ES_AUTOHSCROLL
     PUSHBUTTON      "Password",IDC_PWD_BTN,0,29,43,14
+    PUSHBUTTON      "User",IDC_USER_BTN,0,0,43,14
 END
 
 IDD_MAINDLG DIALOG DISCARDABLE  0, 0, 319, 134
@@ -91,6 +91,21 @@ BEGIN
                     WS_TABSTOP,0,124,59,10
     CONTROL         "letter num sym",IDC_EASY,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,92,25,61,10
+END
+
+IDD_USER_DLG DIALOG DISCARDABLE  0, 0, 191, 173
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Select user"
+FONT 8, "MS Sans Serif"
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,0,159,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,117,159,50,14
+    LISTBOX         IDC_USER_ALL,59,87,132,66,LBS_SORT | 
+                    LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Add",IDC_ADD,0,86,50,14
+    PUSHBUTTON      "Delete",IDC_DELETE,0,0,50,14
+    LISTBOX         IDC_USER_HOTLIST,59,0,132,75,LBS_NOINTEGRALHEIGHT | 
+                    WS_VSCROLL | WS_TABSTOP
 END
 
 
@@ -147,6 +162,13 @@ BEGIN
         VERTGUIDE, 153
         HORZGUIDE, 25
         HORZGUIDE, 114
+    END
+
+    IDD_USER_DLG, DIALOG
+    BEGIN
+        VERTGUIDE, 50
+        VERTGUIDE, 59
+        BOTTOMMARGIN, 116
     END
 END
 #endif    // APSTUDIO_INVOKED
